syntax = "proto3";

package inventory;

service InventoryService {
  // Product management
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc GetProductsByIds(GetProductsByIdsRequest) returns (GetProductsByIdsResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  
  // Category management
  rpc GetCategory(GetCategoryRequest) returns (ProductCategory);
  rpc GetCategoriesByIds(GetCategoriesByIdsRequest) returns (GetCategoriesByIdsResponse);
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (ProductCategory);
  rpc UpdateCategory(UpdateCategoryRequest) returns (ProductCategory);
  
  // Supplier management
  rpc GetSupplier(GetSupplierRequest) returns (Supplier);
  rpc GetSuppliersByIds(GetSuppliersByIdsRequest) returns (GetSuppliersByIdsResponse);
  rpc GetSuppliers(GetSuppliersRequest) returns (GetSuppliersResponse);
  rpc CreateSupplier(CreateSupplierRequest) returns (Supplier);
  rpc UpdateSupplier(UpdateSupplierRequest) returns (Supplier);
  
  // Stock management
  rpc GetStockLevel(GetStockLevelRequest) returns (StockLevel);
  rpc GetStockLevels(GetStockLevelsRequest) returns (GetStockLevelsResponse);
  rpc AdjustStock(AdjustStockRequest) returns (StockMovement);
  rpc GetStockMovementsByIds(GetStockMovementsByIdsRequest) returns (GetStockMovementsByIdsResponse);
  rpc GetStockMovementsByProductIds(GetStockMovementsByProductIdsRequest) returns (GetStockMovementsByProductIdsResponse);
  rpc GetStockMovements(GetStockMovementsRequest) returns (GetStockMovementsResponse);
  
  // Warehouse management
  rpc GetWarehouse(GetWarehouseRequest) returns (Warehouse);
  rpc GetWarehouses(GetWarehousesRequest) returns (GetWarehousesResponse);
  rpc CreateWarehouse(CreateWarehouseRequest) returns (Warehouse);
  rpc UpdateWarehouse(UpdateWarehouseRequest) returns (Warehouse);
  
  // Purchase orders
  rpc GetPurchaseOrder(GetPurchaseOrderRequest) returns (PurchaseOrder);
  rpc GetPurchaseOrders(GetPurchaseOrdersRequest) returns (GetPurchaseOrdersResponse);
  rpc CreatePurchaseOrder(CreatePurchaseOrderRequest) returns (PurchaseOrder);
  rpc UpdatePurchaseOrder(UpdatePurchaseOrderRequest) returns (PurchaseOrder);
  rpc ApprovePurchaseOrder(ApprovePurchaseOrderRequest) returns (PurchaseOrder);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Enums
enum MovementType {
  MOVEMENT_TYPE_IN = 0;
  MOVEMENT_TYPE_OUT = 1;
  MOVEMENT_TYPE_ADJUSTMENT = 2;
  MOVEMENT_TYPE_TRANSFER = 3;
}

enum PurchaseOrderStatus {
  PURCHASE_ORDER_STATUS_DRAFT = 0;
  PURCHASE_ORDER_STATUS_PENDING = 1;
  PURCHASE_ORDER_STATUS_APPROVED = 2;
  PURCHASE_ORDER_STATUS_ORDERED = 3;
  PURCHASE_ORDER_STATUS_RECEIVED = 4;
  PURCHASE_ORDER_STATUS_CANCELLED = 5;
}

// Messages
message Product {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  string category_id = 5;
  double price = 6;
  double cost = 7;
  int32 stock_quantity = 8;
  int32 min_stock_level = 9;
  bool is_active = 10;
  string supplier_id = 11;
  string barcode = 12;
  double weight = 13;
  string dimensions = 14;
  int64 created_at = 15;
  int64 updated_at = 16;
  string organization_id = 17;
}

message ProductCategory {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  string image_url = 5;
  bool is_active = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  string organization_id = 9;
}

message Supplier {
  string id = 1;
  string name = 2;
  string contact_person = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string city = 7;
  string country = 8;
  string tax_id = 9;
  string payment_terms = 10;
  bool is_active = 11;
  int64 created_at = 12;
  int64 updated_at = 13;
  string organization_id = 14;
}

message StockLevel {
  string id = 1;
  string product_id = 2;
  string warehouse_id = 3;
  int32 quantity = 4;
  int32 reserved_quantity = 5;
  int32 available_quantity = 6;
  int64 last_updated = 7;
  string organization_id = 8;
}

message StockMovement {
  string id = 1;
  string product_id = 2;
  string warehouse_id = 3;
  MovementType type = 4;
  int32 quantity = 5;
  string reference = 6;
  string notes = 7;
  string user_id = 8;
  int64 created_at = 9;
  string organization_id = 10;
}

message Warehouse {
  string id = 1;
  string name = 2;
  string code = 3;
  string address = 4;
  string city = 5;
  string country = 6;
  string manager_id = 7;
  bool is_active = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
  string organization_id = 11;
}

message PurchaseOrder {
  string id = 1;
  string order_number = 2;
  string supplier_id = 3;
  PurchaseOrderStatus status = 4;
  int64 order_date = 5;
  int64 expected_delivery_date = 6;
  int64 actual_delivery_date = 7;
  double subtotal = 8;
  double tax_amount = 9;
  double total_amount = 10;
  string currency = 11;
  string notes = 12;
  string created_by = 13;
  string approved_by = 14;
  int64 created_at = 15;
  int64 updated_at = 16;
  string organization_id = 17;
}

message PurchaseOrderItem {
  string id = 1;
  string purchase_order_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double total_price = 6;
  int32 received_quantity = 7;
  string notes = 8;
}

// Request/Response messages
message GetProductRequest {
  string id = 1;
}

message GetProductsByIdsRequest {
  repeated string ids = 1;
}

message GetProductsByIdsResponse {
  repeated Product items = 1;
}

message GetProductsRequest {
  string search = 1;
  string category_id = 2;
  string supplier_id = 3;
  bool is_active = 4;
  bool low_stock = 5;
  int32 limit = 6;
  int32 offset = 7;
  string sort_field = 8;
  string sort_direction = 9;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateProductRequest {
  string sku = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
  double price = 5;
  double cost = 6;
  int32 stock_quantity = 7;
  int32 min_stock_level = 8;
  string supplier_id = 9;
  string barcode = 10;
  double weight = 11;
  string dimensions = 12;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4;
  double price = 5;
  double cost = 6;
  int32 min_stock_level = 7;
  bool is_active = 8;
  string supplier_id = 9;
  double weight = 10;
  string dimensions = 11;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message GetCategoryRequest {
  string id = 1;
}

message GetCategoriesByIdsRequest {
  repeated string ids = 1;
}

message GetCategoriesByIdsResponse {
  repeated ProductCategory items = 1;
}

message GetCategoriesRequest {
  string search = 1;
  string parent_id = 2;
  bool is_active = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message GetCategoriesResponse {
  repeated ProductCategory categories = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
  string parent_id = 3;
  string image_url = 4;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string parent_id = 4;
  string image_url = 5;
  bool is_active = 6;
}

message GetSupplierRequest {
  string id = 1;
}

message GetSuppliersByIdsRequest {
  repeated string ids = 1;
}

message GetSuppliersByIdsResponse {
  repeated Supplier items = 1;
}

message GetSuppliersRequest {
  string search = 1;
  string country = 2;
  bool is_active = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message GetSuppliersResponse {
  repeated Supplier suppliers = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateSupplierRequest {
  string name = 1;
  string contact_person = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string city = 6;
  string country = 7;
  string tax_id = 8;
  string payment_terms = 9;
}

message UpdateSupplierRequest {
  string id = 1;
  string name = 2;
  string contact_person = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string city = 7;
  string country = 8;
  string payment_terms = 9;
  bool is_active = 10;
}

message GetStockLevelRequest {
  string product_id = 1;
  string warehouse_id = 2;
}

message GetStockLevelsRequest {
  string product_id = 1;
  string warehouse_id = 2;
  bool low_stock = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message GetStockLevelsResponse {
  repeated StockLevel stock_levels = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message AdjustStockRequest {
  string product_id = 1;
  string warehouse_id = 2;
  MovementType type = 3;
  int32 quantity = 4;
  string reference = 5;
  string notes = 6;
}

message GetStockMovementsByIdsRequest {
  repeated string ids = 1;
}

message GetStockMovementsByIdsResponse {
  repeated StockMovement items = 1;
}

message GetStockMovementsByProductIdsRequest {
  repeated string product_ids = 1;
  int32 limit = 2;
}

message GetStockMovementsByProductIdsResponse {
  repeated StockMovement movements = 1;
}

message GetStockMovementsRequest {
  string product_id = 1;
  string warehouse_id = 2;
  MovementType type = 3;
  int64 date_from = 4;
  int64 date_to = 5;
  int32 limit = 6;
  int32 offset = 7;
}

message GetStockMovementsResponse {
  repeated StockMovement movements = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message GetWarehouseRequest {
  string id = 1;
}

message GetWarehousesRequest {
  string search = 1;
  string manager_id = 2;
  bool is_active = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message GetWarehousesResponse {
  repeated Warehouse warehouses = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreateWarehouseRequest {
  string name = 1;
  string code = 2;
  string address = 3;
  string city = 4;
  string country = 5;
  string manager_id = 6;
}

message UpdateWarehouseRequest {
  string id = 1;
  string name = 2;
  string address = 3;
  string city = 4;
  string country = 5;
  string manager_id = 6;
  bool is_active = 7;
}

message GetPurchaseOrderRequest {
  string id = 1;
}

message GetPurchaseOrdersRequest {
  string supplier_id = 1;
  PurchaseOrderStatus status = 2;
  int64 date_from = 3;
  int64 date_to = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message GetPurchaseOrdersResponse {
  repeated PurchaseOrder purchase_orders = 1;
  int32 total_count = 2;
  bool has_next_page = 3;
}

message CreatePurchaseOrderRequest {
  string supplier_id = 1;
  string order_number = 2;
  int64 expected_delivery_date = 3;
  string currency = 4;
  repeated CreatePurchaseOrderItemRequest items = 5;
  string notes = 6;
}

message CreatePurchaseOrderItemRequest {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
  string notes = 4;
}

message UpdatePurchaseOrderRequest {
  string id = 1;
  int64 expected_delivery_date = 2;
  repeated CreatePurchaseOrderItemRequest items = 3;
  string notes = 4;
}

message ApprovePurchaseOrderRequest {
  string id = 1;
  string approved_by = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  int64 timestamp = 2;
}